# Neuro-Simulator

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  run_dev.bat  vite.config.ts
.github/workflows/: release.yml
backend/: .env.example  README.md  audio_synthesis.py  chatbot.py  config.py  letta.py  main.py  neuro_panel.py  process_manager.py  requirements.txt  settings.yaml.example  shared_state.py  stream_chat.py  stream_manager.py  websocket_manager.py
backend/panels/: control_panel.html  login.html
client/: README.md  index.html  package-lock.json  package.json
client/src/: main.ts  style.css
client/src-tauri/: Cargo.toml
client/src-tauri/capabilities/: migrated.json
dashboard/: package-lock.json  package.json
dashboard_web/: README.md  index.html
dashboard_web/css/: style.css
dashboard_web/js/: main.js
docs/letta_agents_example/: README.md
docs/working_dir_example/: config.yaml.example
electron/: main.ts
frontend_twitch/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend_twitch/src/: main.ts
frontend_twitch/src-tauri/: Cargo.toml  tauri.conf.json
frontend_twitch_m/src/: style.css
server/: README.md  WEBSOCKET_API.md  config.py  letta.py  main.py  neuro_cli.py  pyproject.toml  setup.py  stream_manager.py
server/neuro_simulator/: agent_api.py  builtin_agent.py  cli.py  config.py  config.yaml.example  letta.py  main.py  stream_manager.py
src/: main.ts  style.css
src/core/: appInitializer.ts
src/services/: apiClient.ts  audioPlayer.ts  websocketClient.ts
(+108 files in other folders)
