[package]
name = "neuro-simulator-frontend"
version = "0.1.0"
description = "Tauri Frontend for Neuro Simulator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"

[features]
custom-protocol = ["tauri/custom-protocol"] 
