[package]
name = "neuro-simulator"
version = "0.1.0"
description = "Neuro Simulator Tauri Client"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
[lib]
name = "neuro_lib"
crate-type = ["staticlib", "cdylib"]
[build-dependencies]
tauri-build = { version = "2", features = [] }
[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
[features]
custom-protocol = ["tauri/custom-protocol"] 
